[package]
name = "rustlife"
version = "0.1.0"
authors = ["Pat Goebel <putterson@gmail.com>"]

[dependencies]
time = "*"
rand = "0.3.0"
piston = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston_window = "*"
piston2d-opengl_graphics = "*"
piston2d-gfx_graphics = "*"
gfx = "0.12.0"
gfx_device_gl = "0.11.0"
gfx_core = "0.4.0"